# diffy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  build.bat  build.rs  build.sh  devenv.nix  flake.nix  skills-lock.json  vcpkg.json
.claude/: settings.local.json
.claude/projects/C--Users-ro-code-diffy/memory/: feedback_build_system.md
.claude/skills/yeet/: SKILL.md
.docs/: reference-repos.txt
.docs/element-system/: plan.md
.docs/visual-polish/: todo.md
build-debug/.qt/qml_imports/: diffy_build.rsp  diffy_conf.rsp
build-debug/.qt/rcc/: diffy_raw_qml_0.qrc  qmake_Diffy.qrc
build-debug/.rcc/qmlcache/: all_aotstats.aotstatslist  module_diffy.aotstatslist
build-debug/Diffy/: diffy_qml_module_dir_map.qrc  qmldir
build-debug/Diffy/qml/components/: DiffPane.qml  DiffStatsBar.qml  EmptyState.qml  InputField.qml  ProgressBar.qml  ShortcutOverlay.qml  Toast.qml
build-debug/Diffy/qml/views/: DiffBrowsingView.qml  WelcomeView.qml
cmake/: VendorGrammars.cmake
cmake/toolchains/: default.cmake
qml/: Main.qml
qml/components/: ActionButton.qml  Badge.qml  Card.qml  ColorUtils.js  CommandPalette.qml  DebugOverlay.qml  DiffPane.qml  FileListPane.qml  FilterComboBox.qml  Icon.qml  InputField.qml  PickerOverlay.qml  ProgressBar.qml  RefPickerDropdown.qml  RepositoryPickerOverlay.qml  SegmentedControl.qml  ShortcutOverlay.qml  Skeleton.qml  SplitHandle.qml  StyledScrollBar.qml  Toast.qml  Tooltip.qml
qml/views/: CompareSetupView.qml  DiffBrowsingView.qml  WelcomeView.qml
scripts/: capture-zed-window.sh  capture.sh  dev-loop.sh  generate-grammar-registry.sh  generate_ghostty_themes.py  perf-matrix.sh  perf_compare.py  perf_export.py  sync-reference-repos.sh  vendor-grammars.sh
src/: fonts.rs  lib.rs  main.cpp  main.rs
src/app/: DiffController.cpp  DiffController.h  QtDiffTypes.cpp  QtDiffTypes.h  RepositoryPickerModel.cpp  ThemeProvider.cpp  ThemeProvider.h  ThemeProviderThemes.qrc  ThemeProviderThemes.qrc.in  controller.rs  ghostty_themes.json  mod.rs  qt_types.rs  theme.rs
src/app/models/: DiffRowListModel.cpp  DiffRowListModel.h  RepositoryPickerModel.cpp  RepositoryPickerModel.h  diff_rows.rs  mod.rs  repo_picker.rs
src/app/quick/: DiffSurfaceItem.cpp  DiffSurfaceItem.h
src/app/surface/: display_layout.rs  item.rs  mod.rs  qt_raster_backend.cpp  qt_raster_backend.hpp  render_doc.rs  strip_layout.rs
src/app_runtime/: mod.rs  runtime.rs  services.rs
src/core/: CompareSpec.cpp  CompareSpec.h  DiffController.cpp  DiffController.h  DiffTypes.cpp  DiffTypes.h  FuzzyMatch.cpp  GitHubApi.cpp  GitHubDeviceFlow.cpp  GitHubDeviceFlow.h  GitHubPullRequest.cpp  GitRepositoryService.cpp  GitRepositoryService.h  SyntaxTypes.h  UnifiedDiffParser.cpp  UnifiedDiffParser.h  WordDiff.cpp  WordDiff.h  error.rs  mod.rs
src/core/compare/: CompareService.cpp  CompareService.h  mod.rs  service.rs  spec.rs
src/core/compare/backends/: DifftasticBackend.cpp  DifftasticBackend.h  GitDiffBackend.cpp  GitDiffBackend.h  IDiffBackend.h  difftastic.rs  git_diff.rs  mod.rs
src/core/diff/: DiffTypes.cpp  DiffTypes.h  UnifiedDiffParser.cpp  UnifiedDiffParser.h  WordDiff.cpp  WordDiff.h  mod.rs  types.rs  unified_parser.rs  word_diff.rs
src/core/rendering/: DiffLayoutEngine.cpp  DiffLayoutEngine.h  FlatDiffRows.cpp  FlatDiffRows.h  PreparedRows.cpp  PreparedRows.h  flat_rows.rs  layout_engine.rs  mod.rs  prepared_rows.rs
src/core/search/: FuzzyMatch.cpp  FuzzyMatch.h  fuzzy.rs  mod.rs
src/core/support/: Log.h
src/core/syntax/: DiffSyntaxAnnotator.cpp  DiffSyntaxAnnotator.h  GrammarData.gen.h  Highlighter.cpp  Highlighter.h  LanguageRegistry.cpp  LanguageRegistry.h  annotator.rs  highlighter.rs  language_registry.rs  mod.rs  types.rs
src/core/text/: TextBuffer.cpp  TextBuffer.h  TextRope.cpp  TextRope.h  buffer.rs  mod.rs  token.rs
src/core/vcs/: CompareSpec.cpp  CompareSpec.h
src/core/vcs/git/: GitRepositoryService.cpp  GitRepositoryService.h  mod.rs  service.rs
src/core/vcs/github/: GitHubApi.cpp  GitHubApi.h  GitHubDeviceFlow.cpp  GitHubPullRequest.cpp  GitHubPullRequest.h  api.rs  device_flow.rs  mod.rs
src/model/: DiffDisplayModel.cpp  DiffDisplayModel.h  DiffPreparedRows.cpp  DiffPreparedRows.h  DiffRowListModel.cpp  DiffRowListModel.h
src/platform/: automation.rs  mod.rs  persistence.rs  startup.rs
src/render/: capture.rs  mod.rs  renderer.rs  scene.rs
src/renderers/: BuiltinGitRenderer.cpp  BuiltinGitRenderer.h  DifftasticRenderer.cpp  DifftasticRenderer.h  IDiffRenderer.h
src/text/: TextRope.cpp  TextRope.h
src/ui/: DiffSurfaceItem.cpp  DiffSurfaceItem.h  actions.rs  animation.rs  app.rs  design.rs  devicons.rs  effects.rs  element.rs  events.rs  icons.rs  layout.rs  mod.rs  palette.rs  shell.rs  signals.rs  state.rs  style.rs  theme.rs  ui_signals.rs
src/ui/components/: avatar.rs  badge.rs  breadcrumb.rs  button.rs  checkbox.rs  context_menu.rs  dropdown.rs  file_icon.rs  file_tree.rs  input.rs  label.rs  list_item.rs  mod.rs  modal.rs  picker.rs  popover.rs  progress.rs  search_field.rs  segmented.rs  sidebar.rs  stat_summary.rs  surface.rs  tabs.rs  toast.rs  toolbar.rs  tooltip.rs
src/ui/diff_viewport/: display_layout.rs  mod.rs  runtime.rs  state.rs  strip_layout.rs
src/ui/editor/: display_layout.rs  element.rs  mod.rs  render_doc.rs  state.rs  strip_layout.rs
src/ui/overlays/: auth.rs  command_palette.rs  compare_sheet.rs  mod.rs  pull_request.rs  ref_picker.rs  repo_picker.rs
tests/: CMakeLists.txt  capture_ui.rs  cpp_boundary.rs  native_boundary.rs  qml_hover_coordinates.rs  test_app_smoke.cpp  test_app_smoke.h  test_builtin_git_renderer.cpp  test_compare_spec.cpp  test_diff_controller.cpp  test_diff_display_model.cpp  test_diff_layout_engine.cpp  test_fuzzy_match.cpp  test_git_diff_backend.cpp  test_highlighter.cpp  test_repository_picker_model.cpp  test_text_buffer.cpp  test_text_rope.cpp  test_unified_diff_parser.cpp  test_word_diff.cpp  ui_surfaces.rs
tests/support/: mod.rs
