[package]
name = "diffy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[dependencies]
qmetaobject = { version = "0.2.10", default-features = false, features = ["log"] }
qttypes = { version = "0.2.12", default-features = false, features = ["required", "qtquick"] }
cpp = "0.5.9"
cstr = "0.2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
git2 = "0.20"
ureq = "3"
tree-sitter = "0.25"
unicode-segmentation = "1.12"
parking_lot = "0.12"
rayon = "1.10"

[build-dependencies]
cpp_build = "0.5.9"
cc = "1.2"

[patch.crates-io]
qmetaobject = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "ff1e23d" }
qttypes = { git = "https://github.com/AdrianEddy/qmetaobject-rs.git", rev = "ff1e23d" }

[[bin]]
name = "diffy"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
