[package]
name = "diffy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = ["native"]
native = ["dep:winit"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
git2 = "0.20"
ureq = { version = "3.3", features = ["json"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24.1"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-toml = "0.20.0"
tree-sitter-nix = "0.3.0"
tree-sitter-zig = "1.1.2"
unicode-segmentation = "1.12"
parking_lot = "0.12"
rayon = "1.10"
tempfile = "3.14"
webbrowser = "1.0"
winit = { version = "0.30", optional = true }

[[bin]]
name = "diffy"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
